# epoxy-riscv

./: .clang-format  .dir-locals.el  .gitignore  README.md  build.nix  default.nix  shell.nix
applications/: hello.dhall  types.dhall  virtio-net.dhall
config/apps/: blink.dhall  fbdemo.dhall  hello.dhall  kern.dhall
config/machines/: qemu.dhall  ulx3s-saxonsoc.dhall
config/systems/: qemu-hello.dhall  ulx3s-saxonsoc-fbdemo.dhall
config/types/: Epoxy.dhall
examples/: application.json  riscv-qemu-machine.json
harden/: Cargo.toml
harden/src/: address_space.rs  boot_image.rs  bump_ptr_alloc.rs  cfgfile.rs  cfgtypes.rs  codegen.rs  constants.rs  elf.rs  elf_writer.rs  epoxy.rs  framebuffer.rs  interval.rs  kernel_codegen.rs  main.rs  page_table.rs  phys_mem.rs  runtypes.rs  vec_utils.rs
machines/: qemu-riscv32.dhall
nix/: 0001-riscv-sifive_test-Allow-16-bit-writes-to-memory-regi.patch  build.nix  ci.nix  dependencies.nix  epoxy-api.nix  epoxy-blink.nix  epoxy-fbdemo.nix  epoxy-hello.nix  epoxy-kern.nix  epoxy-virtio-net.nix  pprintpp.nix  range-v3.nix  release.nix  sources.json  test-hello.nix  test.nix  test.sha256
src/: .gitignore  Makefile  asm.hpp  csr.hpp  exc_entry.S  hello.S  io.cpp  io.hpp  kernel.cpp  link.lds  memory.hpp  paged_entry.S  sbi.hpp  unpaged_entry.S
src/api/: CMakeLists.txt  README.md
src/api/include/: api.hpp  assert.hpp  c_types.hpp  format.hpp  likely.hpp  memory.hpp  types.hpp  vector.hpp
src/api/include/epoxy-api/: c_types.hpp  likely.hpp
src/api/src/: assert.cpp  format.cpp
src/examples/: recursion-example.dhall  riscv-qemu-machine.dhall  ulx3s-saxonsoc-machine.dhall  user-fbdemo.dhall  user-hello.dhall  user-hello.json
src/include/: types.hpp
src/kern/: Makefile
src/kern/include/: asm.hpp  assert.hpp  config_types.hpp  csr.hpp  exception_frame.hpp  exception_info.hpp  exit_kobject.hpp  format.hpp  io.hpp  klog_kobject.hpp  kobject.hpp  kobject_all.hpp  memory.h  patched.hpp  plic.hpp  process.hpp  sbi.hpp  scheduler.hpp  spinlock.hpp  syscall_args.hpp  thread.hpp  util.hpp  vector.hpp  virq.hpp
src/kern/src/: asm.cpp  assert.cpp  exc_entry.S  format.cpp  format_backend.cpp  io.cpp  kernel.cpp  kobject.cpp  link.lds  lshrdi3.c  memset.cpp  paged_entry.S  patched.S  plic.cpp  process.cpp  scheduler.cpp  thread.cpp  unpaged_entry.S  virq.cpp
src/scripts/: config
src/user-blink/: CMakeLists.txt
src/user-blink/src/: main.cpp
src/user-fbdemo/: CMakeLists.txt
src/user-fbdemo/src/: default-resources.hpp  font.inc  main.cpp  text.inc
src/user-hello/: CMakeLists.txt
src/user-hello/src/: entry.S  hello.S  link.lds  main.cpp
src/user-uip/include/: uip-conf.h
src/user-virtio-net/: CMakeLists.txt
src/user-virtio-net/include/: clock-arch.h  pci_device.hpp  uip-conf.h  virtio-spec.hpp
src/user-virtio-net/src/: capabilities.hpp  main.cpp  util.hpp  vring.hpp
src/user/include/esl/: iterators.hpp
src/user/src/: entry.S  format_backend.cpp  link.lds  newlib_backend.cpp  string.cpp
tools/: clang-format-everything
