[package]
name = "harden"
version = "0.1.0"
authors = ["Julian Stecklina <js@alien8.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_dhall = { version = "0.10.0", default-features = false }
anyhow = "1.0.45"
itertools = "0.9.0"
log = "0.4.11"
stderrlog = "0.5.0"
serde = "1.0.118"
goblin = "0.3.1"
byteorder = "1.4.2"
atty = "0.2.14"

[dependencies.clap]
version = "2.33.3"
default-features = false
features = [ "color" ]